API キーを修正

--- a/matminer.ipynb
+++ b/matminer.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled20.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiguc/LimTH3ASBJvfdvrD",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPjoTI1qmhFR0IIPIegBSAA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -96,11 +97,11 @@
       "metadata": {
         "id": "R7Rq7TT0QxTO",
         "colab_type": "code",
+        "outputId": "18657036-277f-413c-f3af-9197628ae12c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 576
-        },
-        "outputId": "18657036-277f-413c-f3af-9197628ae12c"
+        }
       },
       "source": [
         "import cv2\n",
@@ -110,7 +111,7 @@
         "image = plt.imread(\"featurizer.png\")\n",
         "plt.imshow(image)"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -185,16 +186,16 @@
       "metadata": {
         "id": "BoF29sBpa5vQ",
         "colab_type": "code",
+        "outputId": "1ea55715-8333-405b-a285-a834acb6d7e1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "1ea55715-8333-405b-a285-a834acb6d7e1"
+        }
       },
       "source": [
         "pip install matminer"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,19 +341,19 @@
       "metadata": {
         "id": "wvah05aQbxRF",
         "colab_type": "code",
+        "outputId": "96d6a9c8-453e-4ad0-fb8b-945306bd0468",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "96d6a9c8-453e-4ad0-fb8b-945306bd0468"
+        }
       },
       "source": [
         "from matminer.data_retrieval.retrieve_MP import MPDataRetrieval\n",
         "\n",
-        "mpdr = MPDataRetrieval(api_key='pWd4zltwRaO36D9e')\n",
+        "mpdr = MPDataRetrieval(api_key='MY_API_KEY')\n",
         "df_mp = mpdr.get_dataframe(criteria={\"nelements\":1}, properties=[\"density\", \"volume\", \"pretty_formula\"])"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,16 +382,16 @@
       "metadata": {
         "id": "1yMhb0MBh4Dn",
         "colab_type": "code",
+        "outputId": "cab1c057-5b39-4a1e-cb24-f44c184d8bde",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        },
-        "outputId": "cab1c057-5b39-4a1e-cb24-f44c184d8bde"
+        }
       },
       "source": [
         "df_mp.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,16 +523,16 @@
       "metadata": {
         "id": "HxTlHNUxncWD",
         "colab_type": "code",
+        "outputId": "b25198e4-4873-4d8f-c629-5ef00c767d4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 853
-        },
-        "outputId": "b25198e4-4873-4d8f-c629-5ef00c767d4a"
+        }
       },
       "source": [
         "pip install cufflinks"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,11 +595,11 @@
       "metadata": {
         "id": "3zN817HGqAGW",
         "colab_type": "code",
+        "outputId": "470fb78c-2977-4736-c17d-21665c3d2d4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
-        },
-        "outputId": "470fb78c-2977-4736-c17d-21665c3d2d4a"
+        }
       },
       "source": [
         "import cufflinks as cf\n",
@@ -606,7 +607,7 @@
         "cf.go_offline()\n",
         "df_mp.iplot(kind='scatter', x='volume', y=['density'])"
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2996,16 +2997,16 @@
       "metadata": {
         "id": "xvLLeo_drKc3",
         "colab_type": "code",
+        "outputId": "637ee938-78ec-4595-ecd1-75e299ba7311",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 297
-        },
-        "outputId": "637ee938-78ec-4595-ecd1-75e299ba7311"
+        }
       },
       "source": [
         "df_mp.plot(x='pretty_formula', y='volume')"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
