ざっと最後まで読んだ。

--- a/MI_survey_at_2019.ipynb
+++ b/MI_survey_at_2019.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled19.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMSuUVDZJnrHQf+g5rX2Vzd",
+      "authorship_tag": "ABX9TyPs8slHbQHUOemj+IMmOIpg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -168,6 +168,229 @@
         "  * Crystal Graph Convolutional Neural Network(CGCNN)を使って、結晶のdescriptorを計算する方法もある。\n",
         "  * 記述子を使った学習は、いい成果出してるみたい\n",
         "* matminerは[別のノートブック](https://github.com/4may/MIResearch/blob/master/matminer.ipynb)で遊んでみよう"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hXnZb_dYLul_",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Algorithms\n",
+        "\n",
+        "Materials Informaticsでよく使われるアルゴリズムをご紹介。\n",
+        "\n",
+        "**Kernel Ridge Regression(KRR)**\n",
+        "\n",
+        "非線形データを使った連続値の予測に使える幅広く使える。KRRの良いところは、ハイパーパラメータの数が少ないところ。せいぜい三つ。\n",
+        "\n",
+        "$L_2$正則項をたすことで、回帰係数(重み)が0にならないようにする。\n",
+        "\n",
+        "* kernel手法\n",
+        "* カーネル係数gamma\n",
+        "* 正則係数alpha\n",
+        "\n",
+        "**SVM**\n",
+        "\n",
+        "予測精度はKRRとそんなに変わらない。SVMの方がよりスパース性が高い。ただ、ハイパーパラメータの数が多いのでチューニングが大変。\n",
+        "\n",
+        "**Gaussian Process Regression(GPR)**\n",
+        "\n",
+        "訓練データがガウス過程(複数のガウス分布)により生成されていると仮定する。\n",
+        "\n",
+        "GPRのメリットは以下の通り。\n",
+        "\n",
+        "* 分散を見積もることが出来る点\n",
+        "* ハイパーパラメータがGradient Discentで計算できる点\n",
+        "\n",
+        "COMBOがある。\n",
+        "\n",
+        "なお、KRR、SVM、GPRのいずれも特徴量の選択が必須だったが、なかなか適切な特徴量を選択するのは難しい。そこで使われるのが、LASSOだ。\n",
+        "\n",
+        "**LASSO**\n",
+        "\n",
+        "RidgeRegressionとは対照的に、LASSOはできるだけ回帰係数を0にする。つまり、有用な特徴量とそうでない特徴量を明確に分けることが出来るため、しばしば特徴量の選択に使われる。\n",
+        "\n",
+        "ただし、LASSOは計算コストが高く、特徴量の数が$10^9$個以上になると使えない。\n",
+        "\n",
+        "そこで、[SISSO(sure independence screening and sparsifying operator)](https://arxiv.org/pdf/1710.03319.pdf)と呼ばれる手法が登場した。\n",
+        "\n",
+        "**SISSO**\n",
+        "\n",
+        "SISSOはLASSOと比べて、より高次元の特徴量空間に対しても使うことが出来る。\n",
+        "\n",
+        "**PCA**\n",
+        "\n",
+        "特徴量をそのまま使うより、特徴量の数よりも少ない数の固有ベクトルを考えた方が、次元数も少なく出来るしモデルの特性もより正確に表現できるし一石二鳥。\n",
+        "\n",
+        "PCAは、入力の特徴量から新しい特徴量を生み出しているから、特徴選択(feature selection)ではなく、特徴抽出(feature extraction)と考えるべき。\n",
+        "\n",
+        "**Extremly Randomized Trees(ERT)**\n",
+        "\n",
+        "決定木単体だと過学習になりやすいので、複数の決定木を組み合わせるERTやRFがよく使われる。ERTのメリットは以下の通り。\n",
+        "\n",
+        "* 計算が速い\n",
+        "* ハイパーパラメータの数が少ない\n",
+        "* でかいデータにも使える\n",
+        "* 特徴量ごとの重要度から、重要な特徴量がわかる\n",
+        "\n",
+        "また、ERTはRFよりも同等かそれ以上の性能を発揮する。特に、過学習になりやすい問題に対して強みを持つ。\n",
+        "\n",
+        "RFでは何らかの指標をもとに決定木を育てたが、ERTはランダムに決定木を育てる。\n",
+        "\n",
+        "**NN**\n",
+        "\n",
+        "予測精度の高いモデルが欲しいときは、CNNやRNNなど諸々のNNが使われる。\n",
+        "\n",
+        "**Variational Auto Encodrer(VAE)**\n",
+        "\n",
+        "Autoencoderの亜種。解くべきタスクはGANと同じ。ある決められた確率分布にしたがって潜在変数(encoderとdecoderの中間変数)を生成する。\n",
+        "\n",
+        "**GAN**\n",
+        "\n",
+        "最近はMIの分野でも使われ始めた。\n",
+        "\n",
+        "アルゴリズムの選定は問題に寄り切り。\n",
+        "\n",
+        "**最初は単純な方法から試そう**、例えば、KRRやERTなど。**パラメータチューニングや複雑な手法を試すのは後回し**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zCeB7gV9dp4i",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 新しい材料(構造)の発見\n",
+        "\n",
+        "今日に至るまで、組成(composition)から構造(structure)を予測するのは不可能とされてきた。機械学習はこの難題に挑戦する。\n",
+        "\n",
+        "※未知の材料の発見とは、未知の構造を発見することと解釈できる。\n",
+        "\n",
+        "機械学習による材料の発見は、二通りのパターンに分類できる。\n",
+        "\n",
+        "* component prediction\n",
+        "* structure prediction\n",
+        "\n",
+        "機械学習の用語で考えると、前者は二値分類、後者は多値分類。前者は、あるcompositionがある**単一**の構造に含まれる確率を予測する。つまり、含まれるか含まれないかの二択で考えられる。それに対して、後者は入力のcompositionから複数の構造を考える。\n",
+        "\n",
+        "後者の場合、計算量がきついのでSISSOやPCA、クラスタリングで特徴量を減らす。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "T2p_v67tn2I3",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 材料特性の予測\n",
+        "\n",
+        "機械学習を使うことで、様々な材料特性を予測することが出来る。\n",
+        "\n",
+        "* band gap\n",
+        "* bulk and shear moduli(応力歪みの関係性) : \n",
+        "* topological states(位相特性)\n",
+        "* superconductivity(超電導)\n",
+        "\n",
+        "**band gap**\n",
+        "\n",
+        "LED、太陽光発電パネル、トランジスタなど電気に関係する材料の開発をする際に、調べる。最もよく予測対象となる特性。band gapを予測する論文は多い。\n",
+        "\n",
+        "**bulk and shear moduli**\n",
+        "\n",
+        "他の特性とも相関があるため、関連する論文は多い。\n",
+        "\n",
+        "* bonding strength(吸着の強さ)\n",
+        "* thermal conductivity(熱伝導性)\n",
+        "* charge carrier mobility(電荷キャリア移動度)\n",
+        "* hardness(丈夫さ)\n",
+        "\n",
+        "従来は、人間が手で実験データを集めるのは大変なので、DFTを使ってシミュレーションすることが多かったが、計算コストが高いためシミュレーションに時間がかかっていた。\n",
+        "\n",
+        "機械学習で効率的に計算できないか模索中。\n",
+        "\n",
+        "**superconductivity**\n",
+        "\n",
+        "機械学習によって、ある材料が超電導になる温度(臨界温度)を求める。\n",
+        "\n",
+        "### Adaptive Design Process と Active learning\n",
+        "\n",
+        "これまで述べた研究では、原子の構造や物理的特性、安定性など様々な事柄の予測を試みてきた。これらの目的は全て、材料開発のスピードを上げることである。特に、手作業による**実験**をいかに減らせるかがポイント。\n",
+        "\n",
+        "実験の試み方として、adaptive design process(適応的デザイン)というものがある。\n",
+        "\n",
+        "**適応的デザイン**\n",
+        "\n",
+        "統計的に効果が認められるまで実験を繰り返す方法のこと。\n",
+        "\n",
+        "これら実験を加速させるには、不確かさ(uncertainty)の予測が不可欠だ。\n",
+        "\n",
+        "不確かさの予測には、Gaussian Processが特に注目を集めている。また、SVRや決定木、ぶーすてぃんぐなども使われる。\n",
+        "\n",
+        "## 議論\n",
+        "\n",
+        "**interpretability(解釈性)**\n",
+        "\n",
+        "機械学習アルゴリズムはブラックボックス。何が内部で起きているのかわからない。\n",
+        "\n",
+        "動作原理を理解していないと、予期せぬ結果を招いてしまう(耳が痛い)\n",
+        "\n",
+        "そのため、\n",
+        "\n",
+        "Interpretabilityの定義には諸説あるが、ここでは二つの事柄に分けて考えよう。\n",
+        "\n",
+        "**Transparency**\n",
+        "\n",
+        "transparencyは、さらに３つの事柄に分けて考えられる。\n",
+        "\n",
+        "* Simulatability\n",
+        "* Decomposability\n",
+        "* Algorithmic transparency\n",
+        "\n",
+        "Simulatability\n",
+        "\n",
+        "* モデルの計算を理解して、再計算することが出来る能力\n",
+        "* LASSOなどの次元削減方法や、決定木などはこの能力を備えている。\n",
+        "* 材料開発の手法(DFTやMonte calro)はこの性質を持ち合わせていない。\n",
+        "\n",
+        "Decomposability\n",
+        "\n",
+        "* モデルをどれだけ部品化して考えられるか。入力、パラメータ、計算、出力、・・・\n",
+        "\n",
+        "Algorithmic transparency\n",
+        "\n",
+        "* アルゴリズムの動作原理をわかっているか\n",
+        "\n",
+        "**Post hoc explanations**\n",
+        "\n",
+        "モデルから追加の情報を得られるかどうか。例えば、決定木は重要度という付加情報を持っているので、Post hoc explanationsである。\n",
+        "\n",
+        "DNNは、ブラックボックスの典型例である。そのため、動作原理の解析がいくつも行われている。例えば、CNNの動作原理を視覚化して理解しようとする試みがある。NNのモデル自体はわかりづらいかもしれないが、そのモデルの入出力を観察することがモデルへの理解を助けることになる！\n",
+        "\n",
+        "Post hoc explanations大事！\n",
+        "\n",
+        "## 結論\n",
+        "\n",
+        "MIの先端技術まとめ\n",
+        "\n",
+        "* crystal graph convotional networks\n",
+        "* surrogate-based optimization(active learning)\n",
+        "  * 数値シミュレーションを機械学習の手法で近似する方法\n",
+        "* component prediction\n",
+        "* bayesian optimization\n",
+        "* GAN/VAEs\n",
+        "\n",
+        "今後の方向性は二つある。\n",
+        "\n",
+        "* より優れた機械学習アルゴリズムを作る。\n",
+        "  * そのために、ベンチマークとなるデータの整備は必須\n",
+        "* 機械学習モデルの利便性を高める。\n",
+        "  * 材料開発向けの汎用的なフレームワークがない\n",
+        "  * ある特定の問題を解くための俺俺モデルの作成に時間を割くことになる\n",
+        "  * matminerは良いフレームワークと思う"
       ]
     },
     {
